# roland

./: .dockerignore  .gitignore  .goosehints  CHANGELOG.md  CLAUDE.md  DAILY-USAGE.md  DECISIONS.md  Dockerfile  ENHANCEMENTS.md  EXAMPLE_USAGE.md  EXAMPLE_WORKFLOWS.md  FEATURES.md  GETTING_STARTED.md  INSTALLATION.md  LOOP-ENGINEERING-VISION.md  MIGRATION.md  MVP.md  ONBOARDING.md  PLAN.md  README.md  REALITY_CHECK.md  RECIPES_CATALOG.md  RELEASE_NOTES.md  ROADMAP.md  ReadMe.MD  TESTING.md  TROUBLESHOOTING.md  VSCODE_EXTENSION_PLAN.md  bugs.md  config.yaml  eslint.config.js  generate_agents.py  install.ps1  install.sh  package.json  phase-1-summary.md  phase-2-summary.md  phase-3-summary.md  phase-4-summary.md  plan-verification-report.md  (+5 more)
.cursor/: mcp.json  rco-mcp-rco-1772379884950-ap4dyuc.json  test-roland.md
.github/: CODEOWNERS  copilot-instructions.md
.omc/: project-memory.json
.roland-test/: blackboard.json  command-blackboard.md  messages.json
FlowForge/: FlowForge.sln
agents/: accessibility-auditor.yaml  analyst.yaml  api-designer.yaml  architect-low.yaml  architect-medium.yaml  architect.yaml  build-fixer-low.yaml  build-fixer.yaml  code-reviewer-low.yaml  code-reviewer.yaml  critic.yaml  data-engineer.yaml  designer-high.yaml  designer-low.yaml  designer.yaml  devops-agent.yaml  doc-writer.yaml  executor-high.yaml  executor-low.yaml  executor.yaml  explore-high.yaml  explore-medium.yaml  explore.yaml  lead-pm.yaml  performance-analyst.yaml  planner.yaml  qa-tester-high.yaml  (+21 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+652 files in other folders)
