[package]
name = "rco-dashboard"
version = "0.1.0"
description = "RCO monitoring dashboard (Tauri)"
authors = ["Roland"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
